=== Desk Mess Mirrored ===
== Version 2.0.4 ==
Changelog: July 6, 2012
= Code =
* Removed backward compatibility check for wp_nav_menu

= CSS =
* Reduce z-index of #cup to put under menu

= Internet Browsers Reviewed =
* Apple Safari v5.1.7
* Firefox v13.0.1
* Google Chrome v20.0
* Internet Explorer v9.0
* Opera v12.0

/** ------------------------------------------------------------------------- */
== Version 2.0.3 ==
Changelog: July 5, 2012
= Code =
* Added conditional check for custom post types
* Added `dmm_scripts_and_styles` to enqueue additional scripts and styles such as menu animation
* Refactor `dmm_modified_post` to add link to modified author posts if they exist
* Refactor `dmm_wp_title` to more correctly use filter while maintaining backward-compatibility
* Updated `custom-background` parameters to use default image and color

= CSS =
* Added 'extra.css' for menu animation (`add_action` call to enqueue this file has been commented out)
* Add jetpack class to HTML body tag if plugin is active
* Adjusted #content left margin
* Adjusted menu link padding
* Corrected issue with comments meta showing list bullet
* Removed `table` element properties
* Replaced deprecated `get_theme_data`
* Replaced deprecated `add_custom_background`

/** ------------------------------------------------------------------------- */
== Version 2.0.2 ==
Changelog: March 1, 2012
= Code =
* Un-wrapped the `register_nav_menu` call

= Miscellaneous =
* Added additional screenshots
* Updated 'readme.txt' with a Screenshot section and relevant descriptions

/** ------------------------------------------------------------------------- */

== Version 2.0.1 ==
Changelog: February 15, 2012
= Code =
* Fixed display issue when widget title was empty - see `dmm_widget_title`

= CSS =
* Added z-index to "cup" to keep it on top of "sticky notes"
* Adjusted `#logo h2` element text position higher for better cross-browser compatibility

= Miscellaneous =